[gd_scene load_steps=3 format=3 uid="uid://pf4eyj3q32qh"]

[ext_resource type="Script" path="res://game_objects/ui/TrackFinishedScreen.gd" id="1_at3fl"]

[sub_resource type="LabelSettings" id="LabelSettings_3pluh"]
font_size = 24

[node name="TrackFinishedScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_at3fl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.243137, 0.243137, 0.67451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -155.0
offset_right = 190.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Finished time: 00:00"
label_settings = SubResource("LabelSettings_3pluh")
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Would you like to save the game?"
horizontal_alignment = 1

[node name="NameTextBox" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Add your name"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="No" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "No"

[node name="Spacer" type="Control" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Yes" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "Yes
"

[connection signal="text_changed" from="VBoxContainer/NameTextBox" to="." method="_on_name_text_box_text_changed"]
[connection signal="pressed" from="VBoxContainer/Buttons/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Yes" to="." method="_on_yes_pressed"]
